--- a/Tobey.BepInEx.GameInfo/Tobey.BepInEx.GameInfo.csproj
+++ b/Tobey.BepInEx.GameInfo/Tobey.BepInEx.GameInfo.csproj
@@ -18,13 +18,13 @@
   </PropertyGroup>
 
   <Target Name="ZipClean" AfterTargets="AfterClean">
-    <Delete Files="..\bin\$(RootNamespace).Mono.zip;$(OutputPath)\zip\BepInEx\plugins\Tobey\$(TargetFileName)" />
+    <Delete Files="..\bin\$(RootNamespace)_BepInEx5.zip;$(OutputPath)\zip\BepInEx\plugins\Tobey\$(TargetFileName)" />
   </Target>
 
   <Target Name="ZipBuild" AfterTargets="AfterBuild">
     <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(OutputPath)\zip\BepInEx\plugins\Tobey\" />
     <MakeDir Directories="..\bin" Condition="!Exists('..\bin')" />
-    <ZipDirectory SourceDirectory="$(OutputPath)\zip\" DestinationFile="..\bin\$(RootNamespace).Mono.zip" Overwrite="true" />
+    <ZipDirectory SourceDirectory="$(OutputPath)\zip\" DestinationFile="..\bin\$(RootNamespace)_BepInEx5.zip" Overwrite="true" />
   </Target>
 
   <ItemGroup>
