--- a/Tobey.BepInEx.GameInfo.IL2CPP/Tobey.BepInEx.GameInfo.IL2CPP.csproj
+++ b/Tobey.BepInEx.GameInfo.IL2CPP/Tobey.BepInEx.GameInfo.IL2CPP.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Tobey.BepInEx.GameInfo</AssemblyName>
     <Product>Game Info</Product>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
