build(il2cpp): simplify `<DefineConstants>` usage for better IDE hinting

--- a/Tobey.BepInEx.GameInfo.IL2CPP/Tobey.BepInEx.GameInfo.IL2CPP.csproj
+++ b/Tobey.BepInEx.GameInfo.IL2CPP/Tobey.BepInEx.GameInfo.IL2CPP.csproj
@@ -14,7 +14,7 @@
     </RestoreAdditionalProjectSources>
     <RootNamespace>Tobey.BepInEx.GameInfo</RootNamespace>
     <DebugType>none</DebugType>
-    <DefineConstants>$(DefineConstants);IL2CPP</DefineConstants>
+    <DefineConstants>IL2CPP</DefineConstants>
     <Configurations>Release</Configurations>
   </PropertyGroup>
 
