--- a/Tobey.BepInEx.GameInfo/Tobey.BepInEx.GameInfo.csproj
+++ b/Tobey.BepInEx.GameInfo/Tobey.BepInEx.GameInfo.csproj
@@ -7,6 +7,7 @@
     <Version>1.0.1</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <RestoreAdditionalProjectSources>
       https://api.nuget.org/v3/index.json;
       https://nuget.bepinex.dev/v3/index.json;
